name:                travelling-salesman-haskell
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/jakevossen5/traveling-salesman-haskell
license:             MIT
license-file:        LICENSE
author:              Jake Vossen
maintainer:          jake@vossen.dev
copyright:           2020 Jake Vossen
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.org

executable travelling-salesman-haskell
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
